--- a/microgram/src/main/resources/application.properties
+++ b/microgram/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:postgresql://localhost/postgres
+spring.datasource.username=postgres
+spring.datasource.password=qwerty
+spring.datasource.driver-class-name=org.postgresql.Driver
+server.port=8087
